<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.CameraActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_view_detect"
        android:text="@string/view_detect"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="openViewDetect"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_face_detect"
        android:text="@string/face_detect"
        android:layout_below="@+id/bt_view_detect"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="openFaceDetect"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_train"
        android:text="@string/train"
        android:layout_below="@id/bt_face_detect"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="openTrain"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_addPerson"
        android:text="Add Person"
        android:layout_below="@id/bt_train"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="openAddPerson"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_IP"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_addPerson"
        android:visibility="visible"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtIP"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:hint="@string/ip_address"
            android:inputType="phone" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/bt_save"
        android:layout_weight="1"
        android:layout_alignBottom="@+id/layout_IP"
        android:layout_toRightOf="@+id/layout_IP"
        android:layout_toEndOf="@+id/layout_IP"
        android:onClick="setIpAddress"/>

</RelativeLayout>
